letschat/letschat-app/lets-chat-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: letschat
spec:
  to:
    kind: Service
    name: letschat
    weight: 100
  port:
    targetPort: http
status:
  ingress: []
